not fixed yet but login issues still persist